Add TransformingEncoder with pluggable Codec abstraction
Implement serialization fallback for types that cannot be encoded natively,
matching Spark's TransformingEncoder design with a Codec[I, O] abstraction.

Features:
- Codec trait with encode/decode methods (matches Spark's codecs.scala)
- JavaSerializationCodec - built-in, no dependencies
- KryoSerializationCodec - ~10x faster, thread-safe via ThreadLocal
- ForySerializationCodec - up to 170x faster, Scala 3 native support
- TransformingEncoder with factory methods: .java[T], .kryo[T], .fory[T]
- Custom configuration support for Kryo and Fory

API:
  given ProtoEncoder[ThirdParty] = TransformingEncoder.fory[ThirdParty]
  given ProtoEncoder[ThirdParty] = TransformingEncoder.kryo[ThirdParty]
  given ProtoEncoder[ThirdParty] = TransformingEncoder.java[ThirdParty]

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>